--- a/a14_two_layer_net.ipynb
+++ b/a14_two_layer_net.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,11 @@
      "output_type": "stream",
      "text": [
       "Your scores:\n",
-      "None\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
       "\n",
       "correct scores:\n",
       "[[-0.81233741 -1.27654624 -0.70335995]\n",
@@ -102,18 +106,8 @@
       " [-0.15419291 -0.48629638 -0.52901952]\n",
       " [-0.00618733 -0.12435261 -0.15226949]]\n",
       "\n",
-      "Difference between your scores and correct scores:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-2019583e1a80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# The difference should be very small. We get < 1e-7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Difference between your scores and correct scores:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcorrect_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'float'"
+      "Difference between your scores and correct scores:\n",
+      "3.6802720745909845e-08\n"
      ]
     }
    ],
