--- a/a14_two_layer_net.ipynb
+++ b/a14_two_layer_net.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# A bit of setup\n",
     "\n",
@@ -47,9 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 16.24345364  -6.11756414  -5.28171752 -10.72968622]\n",
+      " [  8.65407629 -23.01538697  17.44811764  -7.61206901]\n",
+      " [  3.19039096  -2.49370375  14.62107937 -20.60140709]\n",
+      " [ -3.22417204  -3.84054355  11.33769442 -10.99891267]\n",
+      " [ -1.72428208  -8.77858418   0.42213747   5.82815214]]\n",
+      "[0 1 2 2 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a small net and some toy data to check your implementations.\n",
     "# Note that we set the random seed for repeatable experiments.\n",
@@ -70,7 +92,9 @@
     "    return X, y\n",
     "\n",
     "net = init_toy_model()\n",
-    "X, y = init_toy_data()"
+    "X, y = init_toy_data()\n",
+    "print(X)\n",
+    "print(y)"
    ]
   },
   {
@@ -85,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -93,11 +117,7 @@
      "output_type": "stream",
      "text": [
       "Your scores:\n",
-      "[[-0.81233741 -1.27654624 -0.70335995]\n",
-      " [-0.17129677 -1.18803311 -0.47310444]\n",
-      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
-      " [-0.15419291 -0.48629638 -0.52901952]\n",
-      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "(3.3864457783041217, {})\n",
       "\n",
       "correct scores:\n",
       "[[-0.81233741 -1.27654624 -0.70335995]\n",
@@ -106,8 +126,18 @@
       " [-0.15419291 -0.48629638 -0.52901952]\n",
       " [-0.00618733 -0.12435261 -0.15226949]]\n",
       "\n",
-      "Difference between your scores and correct scores:\n",
-      "3.6802720745909845e-08\n"
+      "Difference between your scores and correct scores:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,) (5,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-2019583e1a80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# The difference should be very small. We get < 1e-7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Difference between your scores and correct scores:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcorrect_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,) (5,3) "
      ]
     }
    ],
@@ -141,9 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between your loss and correct loss:\n",
+      "1.7985612998927536e-13\n"
+     ]
+    }
+   ],
    "source": [
     "loss, _ = net.loss(X, y, reg=0.05)\n",
     "correct_loss = 1.30378789133\n",
