NeuralNet : Forward pass & Backward pass

--- a/a14_two_layer_net.ipynb
+++ b/a14_two_layer_net.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,24 @@
      "output_type": "stream",
      "text": [
       "Your scores:\n",
-      "(3.3864457783041217, {})\n",
+      "(3.3864457783041217, {'W1': array([[ 0.9011439 ,  0.        ,  0.55226823,  0.29990116,  0.62670847,\n",
+      "         0.        ,  0.        , -0.06772897,  0.22222636,  0.19645425],\n",
+      "       [-0.3393863 ,  0.        , -0.79420546, -0.41228145, -0.88170532,\n",
+      "         0.        ,  0.        , -0.34481856, -0.76574544, -0.35805   ],\n",
+      "       [-0.29301574,  0.        ,  0.91851343,  0.40563854,  0.91443281,\n",
+      "         0.        ,  0.        ,  0.01658136,  1.14378255,  0.31149933],\n",
+      "       [-0.59525465,  0.        , -1.2212134 , -0.53633724, -1.20030154,\n",
+      "         0.        ,  0.        ,  0.22892701, -1.03803548, -0.34454545]]), 'W2': array([[-0.50327916, -0.6104617 , -0.47004876],\n",
+      "       [ 0.        ,  0.        ,  0.        ],\n",
+      "       [-0.86395326, -1.12573193, -0.9958293 ],\n",
+      "       [-1.45504824, -1.87096532, -1.55524441],\n",
+      "       [-1.52145989, -2.0705181 , -1.79210809],\n",
+      "       [ 0.        ,  0.        ,  0.        ],\n",
+      "       [ 0.        ,  0.        ,  0.        ],\n",
+      "       [-0.11448865, -0.12176903, -0.12336701],\n",
+      "       [-0.80258014, -1.08136772, -0.98177179],\n",
+      "       [-1.31307995, -1.80502032, -1.57256993]]), 'b2': array([-0.5900309, -0.7431905, -0.6667786]), 'b1': array([0.05547736, 0.        , 0.09617915, 0.04377641, 0.09687975,\n",
+      "       0.        , 0.        , 0.03927952, 0.07924568, 0.03666036])})\n",
       "\n",
       "correct scores:\n",
       "[[-0.81233741 -1.27654624 -0.70335995]\n",
@@ -136,7 +153,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-2019583e1a80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# The difference should be very small. We get < 1e-7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Difference between your scores and correct scores:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcorrect_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-50-2019583e1a80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# The difference should be very small. We get < 1e-7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Difference between your scores and correct scores:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mcorrect_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,) (5,3) "
      ]
     }
@@ -171,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -202,11 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 max relative error: 3.561318e-09\n",
+      "W2 max relative error: 3.440708e-09\n",
+      "b2 max relative error: 4.447625e-11\n",
+      "b1 max relative error: 2.738421e-09\n"
+     ]
+    }
+   ],
    "source": [
-    "from cs231n.gradient_check import eval_numerical_gradient\n",
+    "from modules.gradient_check import eval_numerical_gradient\n",
     "\n",
     "# Use numeric gradient checking to check your implementation of the backward pass.\n",
     "# If your implementation is correct, the difference between the numeric and\n",
@@ -266,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cs231n.data_utils import load_CIFAR10\n",
+    "from modules.data_utils import load_CIFAR10\n",
     "\n",
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000):\n",
     "    \"\"\"\n",
