NeuralNet : tuning hyper params : FINISHED

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -412,32 +412,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "y = np.array([None, 1, 2, 2, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([None, 1, 2, 2, 1], dtype=object)"
+       "[40, 67, 85, 42, 63, 63, 12, 42, 56, 57, 98, 17, 77, 65, 72, 21, 7, 60, 76, 11]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "import numpy as np\n",
+    "y = np.array([None, 1, 2, 2, 1])\n",
+    "hidden_size = []\n",
+    "for i in range(20):\n",
+    "    hidden_size.append(np.random.randint(1, 100))\n",
+    "# 1 * np.random.randn(32*32*3, hidden_size)\n",
+    "hidden_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(1, 100)"
    ]
   },
   {
